--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	
+    <meta name="baidu_union_verify" content="bb26d2f942ea768713734318bc9790cb">
 
     <meta name="description" content="UI Designer. Plan to be a coder.">
 
